force-app/main/default/objects/Schedule_Interview__c/Schedule_Interview__c.object-meta.xml
<CustomObject>
    <label>Schedule Interview</label>
    <nameField>
        <label>Schedule Interview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>