force-app/main/default/objects/Schedule_Interview__c/fields/Interview_Mode__c.field-meta.xml
<CustomField>
    <fullName>Interview_Mode__c</fullName>
    <label>Interview Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>