force-app/main/default/objects/Schedule_Interview__c/fields/InvitationLink__c.field-meta.xml
<CustomField>
    <fullName>InvitationLink__c</fullName>
    <description>Invitation Link for Interview</description>
    <label>InvitationLink</label>
    <type>Url</type>
</CustomField>