force-app/main/default/objects/Schedule_Interview__c/fields/Reporting_Location__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Location__c</fullName>
    <description>Reporting Location Means Address  of the Interview location.</description>
    <label>Reporting Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>