force-app/main/default/objects/Schedule_Interview__c/fields/Schedule_Interview_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Interview_Start_DateTime__c</fullName>
    <label>Schedule Interview Start DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>